# carpe-momentum-2

./: .gitignore
adapter/: CarpeMomentum.Adapter.sln
adapter/src/CarpeMomentum.Adapter/: CarpeMomentum.Adapter.csproj  Program.cs  appsettings.Development.json  appsettings.json
adapter/src/CarpeMomentum.Adapter/Properties/: launchSettings.json
adapter/src/CarpeMomentum.Adapter/Scanner/: DefaultPillarConfig.cs  PillarEvaluation.cs  PillarEvaluator.cs  PillarInputs.cs  ScannerCandidate.cs  ScannerEnrichmentCoordinator.cs  SymbolState.cs
adapter/src/CarpeMomentum.Adapter/Services/: MarketDataServiceImpl.cs  NewsServiceImpl.cs  OrderServiceImpl.cs  PingServiceImpl.cs  ScannerServiceImpl.cs  SettingsServiceImpl.cs
adapter/src/CarpeMomentum.Adapter/Tws/: AggregatedBarsSubscription.cs  BarAggregator.cs  BarConversions.cs  BarsSubscription.cs  QuoteSubscription.cs  ScannerSnapshotSubscription.cs  TwsConnection.EWrapper.cs  TwsConnection.cs  TwsConnectionOptions.cs  TwsHostedService.cs
docs/: SPEC.md
proto/carpe_momentum/v1/: common.proto  market_data.proto  news.proto  order.proto  pillar.proto  ping.proto  scanner.proto  settings.proto
scripts/: ewrapper-signatures.txt
ui/: .gitignore  buf.gen.yaml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  styles.css
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src/api/: transport.ts
